<resources>
    <string name="app_name">Report</string>
    <string name="btnReport">Report</string>
    <string name="btnTasks">Tasks</string>
    <string name="login">Please log in to access tasks</string>
    <string name="repHome">Home:</string>
    <string name="repTitle">Task Title:</string>
    <string name="repDateSubmitted">Date Submitted:</string>
    <string name="repDateDue">Date Due:</string>
    <string name="repDesc">Description:</string>
    <string name="repPicture">Photograph:</string>
    <string name="repBtnPicture">Add Picture</string>
    <string name="repPriority">Priority:</string>
    <string name="repSend">Send Task</string>
    <string name="repNotes">Notes (Optional):</string>
    <string name="loginPass">Password</string>
    <string name="loginId">Personal ID</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="title_activity_task_page">TaskPage</string>
    <string name="regWelcome">Please enter all fields to complete your registration</string>
    <string name="regDate">Select Date of Birth</string>
    <string name="btnComplete">Complete</string>
    <string name="btnDelete">Delete</string>
    <string name="btnUpdate">Update</string>
    <string name="btnHome">Return to Home Page</string>
    <string name="btnCompletedTasks">Completed Tasks</string>
    <string name="title_activity_settings_page">Settings</string>
    <string name="btnAccounts">View All Worker Accounts</string>
    <string name="btnResetAccs">Reset All Worker Accounts</string>
    <string name="btnResetTasks">Reset All Outstanding Tasks</string>
    <string name="lblID">Worker ID:</string>
    <string name="btnEditAcc">Edit Account</string>
    <string name="btnSave">Save</string>
    <string name="lblChangePic">Change photo</string>
    <string name="btnSet">Set</string>
    <string name="btnRotate">Rotate</string>
</resources>
