<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.napier.maintenanceapp.ReportPage">

    <ScrollView
        android:layout_width="344dp"
        android:layout_height="495dp"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repHome"
                android:textColor="#110000"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="16dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/spnHome"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="16dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repTitle"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="55dp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblPriority"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:text="@string/repPriority"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Spinner
                android:id="@+id/spnPriority"
                android:layout_width="152dp"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblDateSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repDateSubmitted"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="153dp"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/txtDateSubmitted"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textColor="#110000"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblDateDue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repDateDue"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="114dp"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <DatePicker
                android:id="@+id/dteDateDue"
                android:layout_width="238dp"
                android:layout_height="141dp"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                tools:layout_editor_absoluteX="116dp"
                tools:layout_editor_absoluteY="16dp"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repDesc"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/txtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repPicture"
                android:textColor="#110000" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <ImageView
                android:id="@+id/imgPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:color/background_light" />

            <Button
                android:id="@+id/btnAddPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repBtnPicture" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/lblNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repNotes"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/txtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="#110000"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repSend" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
