<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.napier.maintenanceapp.SettingsPage">

    <Button
        android:id="@+id/btnResetTasks"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/btnResetTasks"
        android:textAlignment="textStart"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnResetAccs"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnAccounts"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:text="@string/btnAccounts"
        android:background="@android:color/transparent"
        android:textAlignment="textStart"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnResetAccs"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/btnResetAccs"
        android:textAlignment="textStart"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAccounts"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
