<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.napier.maintenanceapp.CompletedPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spnTasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/lblHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repHome"
                    android:textColor="#110000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="16dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtHomeShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repTitle"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblPriority"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repPriority"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtPriorityShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblDateSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repDateSubmitted"
                    android:textColor="#110000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="153dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtDateSubmitted"
                    android:layout_width="238dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblDateDue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repDateDue"
                    android:textColor="#110000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="114dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtDateDueShow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repDesc"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblPicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repPicture"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <ImageView
                    android:id="@+id/imgPicture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:color/background_light" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/lblNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repNotes"
                    android:textColor="#110000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <TextView
                    android:id="@+id/txtNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/btnHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btnHome" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
