<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="uk.ac.napier.maintenanceapp.LoginPage">

    <EditText
        android:id="@+id/txtLoginName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/loginName"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_action_name"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="272dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/txtLoginPass" />

    <EditText
        android:id="@+id/txtLoginPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/loginPass"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_pass"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="342dp"
        android:layout_below="@+id/txtLoginName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="42dp"
        android:text="@string/btnLogin"
        android:background="@drawable/corner_button"
        android:layout_below="@+id/txtLoginPass"
        android:layout_alignStart="@+id/txtLoginPass" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/btnRegister" />

</RelativeLayout>
