<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.napier.maintenanceapp.AccountsPage">

    <Spinner
        android:id="@+id/spnAccount"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/txtAccID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:text="N/A"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblID"
        android:layout_marginStart="70dp" />

    <TextView
        android:id="@+id/txtAccName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="225dp"
        android:text="No Name"
        android:textSize="14pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <ImageView
        android:id="@+id/imgProfilePic"
        android:layout_width="140dp"
        android:layout_height="161dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_pic"
        android:layout_marginEnd="25dp" />

    <TextView
        android:id="@+id/lblID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblID"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N/A"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAccName"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/lblPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N/A"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnEditAcc"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnEditAcc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

    <Button
        android:id="@+id/btnAccSave"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="95dp"
        android:text="@string/btnSave"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPhone" />

    <EditText
        android:id="@+id/txtEditPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="Phone"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAccName" />

    <EditText
        android:id="@+id/txtEditPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="131dp"
        android:ems="10"
        android:hint="Type Here to Change Password"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAccName" />

    <EditText
        android:id="@+id/txtEditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAccName" />

    <EditText
        android:id="@+id/txtEditName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="14pt"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="211dp"
        android:layout_marginRight="30dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lblChangePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lblChangePic"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfilePic"
        app:layout_constraintTop_toTopOf="@+id/imgProfilePic"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imgProfilePic"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imgProfilePic" />

</android.support.constraint.ConstraintLayout>
